Don't look all class this is an error but modify .collect(Collector)... in .toList